# oscar

./: .gitignore  .project  Cargo.toml  LICENSE.txt  Makefile  README.md  memo.txt  update-script
src/: add.py  config.py  delete.py  gc.py  gc_ft.py  groonga.py  init.py  license.py  log.py  main.rs  nanka.py  oscar.py  schedule.py  search.py  sudo.py  sync.py  truncate.py  unix.py  update.py  version.py  walk.py  watch.py
src/extract/: __init__.py  elinks.py  htmltotext.py  officexml.py  pdftotext.py  ppthtml.py  text.py  wvhtml.py  xl.py
src/samba/: __init__.py
src/samba/pypassdb/: passdb.py  user.py
src/test/: __init__.py  delete_test.py  hogetest.py  oscar_test.py  samba_test.py  search_test.py  smb.conf  walk_test.py
src/web/: __init__.py  __main__.py  admin.py  sysinfo.py
src/web/static/js/: oscar.js
src/web/templates/: admin.html  index.html  page.html  share.html
