[package]
name = "oscar"
version = "0.9.1"
authors = ["Tomoatsu Shimada <shimada@walbrix.com>"]

[dependencies]
regex = "0.2.1"
lazy_static = "0.2.2"
docopt = "0.7.0"
rustc-serialize = "0.3.22"
ruroonga = "0.6.0"

[dependencies.cpython]
version = "0.1"
default-features = false
features = ["python27-sys"]
